# sase-ci

./: index.html
.github/workflows/: ci.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 1169a931c996c8d.txt  1181e688025fc26a.txt  11ec891748c6b6c8.txt  (+392 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
panw-takehome/: .gitignore  CLAUDE_LOG.md  README.md  conftest.py  exhaustive_claude_log.md  pyproject.toml  pytest.ini
panw-takehome/.claude/rules/: code-style.md  framework-rules.md  testing-standards.md
panw-takehome/.claude/skills/: edge-case-analyzer.md  test-generator.md  validator-generator.md
panw-takehome/config/: environments.yaml
panw-takehome/panw_takehome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
panw-takehome/src/clients/: env_client.py
panw-takehome/src/config/: loader.py
panw-takehome/src/reporting/: allure_hooks.py
panw-takehome/src/validators/: alpha_country.py  base.py  country.py  daily_weather.py  region_country.py  weather.py
panw-takehome/test_data/: cities.json  country_codes.json  regions.json
panw-takehome/tests/: conftest.py
panw-takehome/tests/countries/: test_alpha.py  test_countries.py  test_regions.py
panw-takehome/tests/shared/: test_sla.py  test_sla_enforcement.py
panw-takehome/tests/weather/: test_daily_forecast.py  test_weather.py
widgets/: behaviors.json  duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+828 files in other folders)
